[metadata]
name = profimp
version = 0.0.1
summary = profimp - generates tree of imports profiles
description-file =
    README.rst
author = Boris Pavlovic
author-email = boris@pavlovic.me
home-page = http://boris-42.me
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    profimp

[entry_points]

console_scripts =
     profimp = profimp.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
