[metadata]
name = profimp
version = 0.0.2
summary = profimp - generates tree of imports profiles
description-file =
    README.rst
author = Boris Pavlovic
author-email = boris@pavlovic.me
home-page = http://boris-42.me
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    profimp

[entry_points]

console_scripts =
     profimp = profimp.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

